<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Tyari Campus</string>

    <string name="tab_home">Home</string>
    <string name="tab_practice">Solved QA</string>
    <string name="tab_test">Test Series</string>

    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>

    <string name="action_settings">Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>

    <string name="my_section">My Section</string>
    <string name="results">My Results</string>
    <string name="tests">Purchased Tests</string>

    <string name="other">Other</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>

    <string name="welcome_user">Welcome, User</string>
    <string name="email">info@tyaricampus.com</string>

    <string name="payment">Payment</string>
    <string name="package_info">Package Info</string>
    <string name="choose_language">Change Language</string>
    <string name="subject">Select Exam</string>

    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_mobile">Enter mobile</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_password">Enter password</string>

    <string name="verification_code">Verification Code</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="server_down_message">Server is down for maintenance. Please try again later.</string>
    <string name="please_check_internet_connection">Looks like your internet connection is taking a nap!\nApp works best on 4G network</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="invalid_user_message">Your are not a valid user or session is expired. Please try again.</string>
    <string name="no_free_test_available">Free test is not available to start.</string>
    <string name="no_question_available">No question available to view</string>
    <string name="loading">Loading&#8230;</string>

    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_number">Please enter Mobile Number</string>
    <string name="please_enter_email">Please enter Email ID</string>
    <string name="please_enter_valid_number">Please enter valid mobile number</string>
    <string name="please_enter_valid_email">Please enter valid Email ID</string>

    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="verification_code_length_error">Please enter 6 digit verification code</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_confirm_new_password">Please confirm new password</string>
    <string name="passwords_dint_match">New passwords did not match</string>
    <string name="new_password_cannot_be_same_as_old_password">New password cannot be same as old password.</string>
    <string name="verification_code_title">Please enter you registered mobile number</string>
    <string name="verification_code_message">Ensure the 6 digit code sent to your registered mobile number</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="resend_code">Resend Code</string>
    <string name="zero">0</string>
    <string name="buy_now">Buy Now</string>
    <string name="free_test">Free Pack</string>
    <string name="silver_test">Silver Pack</string>
    <string name="gold_test">Gold Pack</string>
    <string name="platinum_test">Platinum Pack</string>
    <string name="start_test">Start Test</string>
    <string name="package_title_format">Exam - %s\nSubject - %s</string>
    <string name="total_tests_available">%d Total tests available</string>
    <string name="upgrade_tests_available">Upgrade to more available tests</string>
    <string name="no_more_tests_available">No more tests available to upgrade</string>
    <string name="pack_price">Price - \u20B9 %s</string>
    <string name="pack_total_price">Total Price \n \u20B9 %s</string>
    <string name="pack_language">Language - %s</string>
    <string name="pack_tests">No of Tests - %s</string>
    <string name="question_count">%s Questions</string>
    <string name="test_duration">%s Minutes</string>
    <string name="no_correct_answers">%s Correct Answers</string>
    <string name="pay_now">Pay Now</string>
    <string name="direction_for_question">Direction for Questions</string>
    <string name="submit">Submit</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="save_subject">Save Subject</string>
    <string name="cancel">Cancel</string>
    <string name="test">Test</string>
    <string name="time_expire">Time Expired!</string>
    <string name="submit_test_confirmation">Are you sure you want to submit test?</string>
    <string name="time_expire_test_confirmation">Your time to attempt this test expired. You want to submit this test?</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="empty_string">E</string>
    <string name="jobs">Jobs</string>
    <string name="books">Books</string>
    <string name="videos">Video</string>
    <string name="exam_information">Exam Information</string>
    <string name="exam_info_tgt_pgt">TGT/PGT</string>
    <string name="exam_info_ctet">CTET</string>
    <string name="exam_info_ssc">SSC</string>
    <string name="exam_info_ibps">IBPS</string>
    <string name="exam_info_air_force">Air Force</string>
    <string name="exam_info_nda">NDA</string>
    <string name="exam_info_vdo">VDO</string>
    <string name="overall_analysis">Overall Analysis</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="skipped">Skipped</string>
    <string name="score">Score</string>
    <string name="score_question_format">/%d</string>
    <string name="attempt_again">Attempt Again</string>
    <string name="view_solution">View Solution</string>
    <string name="view_details">View Details</string>
    <string name="not_available">Not Available</string>
    <string name="answer">Answer:</string>
    <string name="explanation">Explanation:</string>
    <string name="question_number_format">Q. %d</string>
    <string name="press_back_again_to_exit_message">In case you want to exit, press back again.</string>
    <string name="last_question_message">You reached on the end of test. Please submit if you done with test</string>
    <string name="first_question_message">You are on the start of test.</string>

</resources>
