<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_nav_edit_profile"
            android:title="@string/update_profile" />

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_nav_change_password"
            android:title="@string/change_password" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_exit"
            android:title="@string/logout" />

        <item android:title="@string/my_section">
            <menu>
                <item
                    android:id="@+id/nav_results"
                    android:icon="@drawable/ic_nav_results"
                    android:title="@string/results" />
                <item
                    android:id="@+id/nav_tests"
                    android:icon="@drawable/ic_nav_tests"
                    android:title="@string/tests" />
            </menu>
        </item>

        <item android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_nav_settings"
                    android:title="@string/choose_language" />
                <item
                    android:id="@+id/nav_refer"
                    android:icon="@drawable/ic_nav_share"
                    android:title="@string/refer_and_earn" />
                <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/ic_nav_contact_us"
                    android:title="@string/contact_us" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_nav_help"
                    android:title="@string/help" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_nav_about"
                    android:title="@string/about" />
            </menu>
        </item>
    </group>
</menu>
