<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="#D4AF37">

    <ImageView
        android:id="@+id/imgVwProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/app_name"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="fitXY"
        android:src="@drawable/ic_profile_placeholder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtVwName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/welcome_user"
        app:layout_constraintBottom_toTopOf="@id/txtVwEmail"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtVwEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
