<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activity.ExamInformationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/exam_information"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_percent_33"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".33" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_percent_64"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".64" />

    <TextView
        android:id="@+id/txtVwInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@null"
        android:drawablePadding="20dp"
        android:drawableTop="@drawable/tgt"
        android:gravity="center"
        android:text="@string/exam_info_tgt_pgt"
        android:textColor="#5a5660"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline_percent_33"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/txtVwInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawablePadding="20dp"
        android:drawableTop="@drawable/ctet"
        android:gravity="center"
        android:text="@string/exam_info_ctet"
        android:textColor="#5a5660"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/guideline_percent_33"
        app:layout_constraintRight_toRightOf="@+id/guideline_percent_64"
        app:layout_constraintTop_toTopOf="@+id/txtVwInfo1" />

    <TextView
        android:id="@+id/txtVwInfo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawablePadding="20dp"
        android:drawableTop="@drawable/ssc"
        android:gravity="center"
        android:text="@string/exam_info_ssc"
        android:textColor="#5a5660"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/guideline_percent_64"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtVwInfo1" />

    <TextView
        android:id="@+id/txtVwInfo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@null"
        android:drawablePadding="20dp"
        android:drawableTop="@drawable/ibps"
        android:gravity="center"
        android:text="@string/exam_info_ibps"
        android:textColor="#5a5660"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/txtVwInfo1"
        app:layout_constraintRight_toRightOf="@+id/txtVwInfo1"
        app:layout_constraintTop_toBottomOf="@+id/txtVwInfo1" />

    <TextView
        android:id="@+id/txtVwInfo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_weight="1"
        android:background="@null"
        android:drawablePadding="20dp"
        android:drawableTop="@drawable/nda"
        android:gravity="center"
        android:text="@string/exam_info_nda"
        android:textColor="#5a5660"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVwInfo1" />

    <TextView
        android:id="@+id/txtVwInfo6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@null"
        android:drawablePadding="20dp"
        android:drawableTop="@drawable/vdo"
        android:gravity="center"
        android:text="@string/exam_info_vdo"
        android:textColor="#5a5660"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/txtVwInfo3"
        app:layout_constraintRight_toRightOf="@+id/txtVwInfo3"
        app:layout_constraintTop_toBottomOf="@+id/txtVwInfo1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVwInfo4" />


</android.support.constraint.ConstraintLayout>