<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:ignore="contentDescription,SmallSp,SpUsage">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerVwOffers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cntLytHomeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerVwOffers">

            <android.support.constraint.Guideline
                android:id="@+id/guideline_33"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".33" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_64"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".64" />

            <TextView
                android:id="@+id/txtVwJobs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:background="@null"
                android:drawableTop="@drawable/jobs"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/jobs"
                android:textColor="#5a5660"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/guideline_33"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtVwBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableTop="@drawable/books"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/books"
                android:textColor="#5a5660"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/guideline_33"
                app:layout_constraintRight_toRightOf="@+id/guideline_64"
                app:layout_constraintTop_toTopOf="@+id/txtVwJobs" />

            <TextView
                android:id="@+id/txtVwVideos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableTop="@drawable/videos"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/videos"
                android:textColor="#5a5660"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/guideline_64"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtVwJobs" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtVwJobs" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/txtVwExamInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/btn_blue_back"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/exam_information"
            android:textAllCaps="true"
            android:textColor="#333137"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cntLytHomeHeader" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cntLytExamInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtVwExamInfo">

            <android.support.constraint.Guideline
                android:id="@+id/guideline_percent_33"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".33" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_percent_64"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".64" />

            <TextView
                android:id="@+id/txtVwInfo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:background="@null"
                android:drawableTop="@drawable/tgt"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/exam_info_tgt_pgt"
                android:textColor="#5a5660"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/guideline_percent_33"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/txtVwInfo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableTop="@drawable/ctet"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/exam_info_ctet"
                android:textColor="#5a5660"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/guideline_percent_33"
                app:layout_constraintRight_toRightOf="@+id/guideline_percent_64"
                app:layout_constraintTop_toTopOf="@+id/txtVwInfo1" />

            <TextView
                android:id="@+id/txtVwInfo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableTop="@drawable/ssc"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/exam_info_ssc"
                android:textColor="#5a5660"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/guideline_percent_64"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtVwInfo1" />

            <TextView
                android:id="@+id/txtVwInfo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@null"
                android:drawableTop="@drawable/ibps"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/exam_info_ibps"
                android:textColor="#5a5660"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@+id/txtVwInfo1"
                app:layout_constraintRight_toRightOf="@+id/txtVwInfo1"
                app:layout_constraintTop_toBottomOf="@+id/txtVwInfo1" />

            <TextView
                android:id="@+id/txtVwInfo5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/nda"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/exam_info_nda"
                android:textColor="#5a5660"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtVwInfo1" />

            <TextView
                android:id="@+id/txtVwInfo6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@null"
                android:drawableTop="@drawable/vdo"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/exam_info_vdo"
                android:textColor="#5a5660"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@+id/txtVwInfo3"
                app:layout_constraintRight_toRightOf="@+id/txtVwInfo3"
                app:layout_constraintTop_toBottomOf="@+id/txtVwInfo1" />
        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cntLytExamInfo" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>